<resources>
    <string name="app_name">GymFit</string>

    <!-- Activity: Register -->
    <string name="register_headline">Registrieren</string>
    <string name="register_description">Erstelle einen neuen GymFit Account</string>
    <string name="register_name_hint">Dein Name</string>
    <string name="register_email_hint">Deine E-Mail Adresse</string>
    <string name="register_password_hint">Wähle ein Passwort</string>
    <string name="register_password_confirm_hint">Passwort bitte bestätigen</string>
    <string name="register_button_createNewAccount">REGISTRIEREN</string>
    <string name="register_text_alreadyRegisteredToLogin">Du hast bereits ein Konto? Jetzt einloggen!</string>


    <!-- Activity: Login -->
    <string name="login_headline">Einloggen</string>
    <string name="login_description">mit deinem GymFit Account</string>
    <string name="login_email_hint">Deine E-Mail Adresse</string>
    <string name="login_password_hint">Dein Passwort</string>
    <string name="login_button">LOGIN</string>
    <string name="login_text_NoAccountToRegister">Du hast noch kein GymFit Konto?</string>
    <string name="login_text_ForgotPassword">Passwort vergessen?</string>


    <!-- Navigation -->
    <string name="navbar_title_dashboard">Training</string>
    <string name="navbar_title_exercise">Übungen</string>
    <string name="navbar_title_analyse">Analyse</string>
    <string name="navbar_title_friends">Freunde</string>
    <string name="navbar_title_profil">Profil</string>


    <!-- Fragment: Profil -->
    <string name="fragment_profil_userName">Max Mustermann</string>
    <string name="fragment_profil_userEmail">mustermann@gmail.com</string>
    <string name="profile_button_logout">Ausloggen</string>
    <string name="profile_button_resendVerificationCode">E-Mail Verifizierung erneut senden</string>
    <string name="profile_text_accountNotVerified">Wichtig: Dein Konto ist noch nicht verifiziert!</string>


    <!-- Fragment: Exercise -->
    <string name="fragment_exercise_button_createExercise">Übung erstellen</string>


    <!-- Fragment: CreateExercise -->
    <string name="fragment_createExercise_exerciseName_title">Wie lautet die Übung?</string>
    <string name="fragment_createExercise_exerciseName">Name der Übung</string>
    <string name="fragment_createExercise_deviceName_title">Wie heißt das Gerät der Übung?</string>
    <string name="fragment_createExercise_deviceName">Name des Geräts</string>
    <string name="fragment_createExercise_notes_title">Notizen zu deiner Übung:</string>
    <string name="fragment_createExercise_notes">Deine Notizen</string>

    <string name="fragment_createExercise_confirm">Übung speichern</string>


    <!-- Fragment: Training -->
    <string name="fragment_training_headline_workouts">Workouts</string>
    <string name="fragment_training_subheadline_workouts">Wähle die Übungen für ein neues Training aus</string>
    <string name="fragment_training_headline_plans">Trainingspläne</string>
    <string name="fragment_training_subheadline_plans">Erstelle deine eigenen Trainingseinheiten</string>


    <!-- Fragment: CreatePlan -->
    <string name="fragment_createPlan_title">Name des Trainingsplans</string>
    <string name="fragment_createPlan_confirm">Plan erstellen</string>

    <!-- Fragment: WorkoutsOverview -->
    <string name="fragment_workoutsOverview_button_createWorkout">Workout erstellen</string>

    <!-- Fragment: WorkoutExercises -->
    <string name="fragment_workoutsExercises_button_editWorkout">Workout bearbeiten</string>

    <!-- Fragment: WorkoutExercisesSinglePerformance -->
    <string name="fragment_workoutSingleExercisePerformance_addSet">Satz hinzufügen</string>
    <string name="fragment_workoutSingleExercisePerformance_checkExercise">Übung abhaken</string>
    <string name="fragment_workoutSingleExercisePerformance_addNote">Notizen hinzufügen</string>
    <string name="fragment_workoutSingleExercisePerformance_repsHint">Wdh.</string>
    <string name="fragment_workoutSingleExercisePerformance_loadHint">Gewicht</string>
    <string name="fragment_workoutSingleExercisePerformance_setNumberHint">Satz</string>

    <!-- Fragment: WorkoutCreation -->
    <string name="fragment_workoutCreation_button_confirmWorkout">Workout starten</string>
    <string name="fragment_workoutCreation_workoutName">Name des Workouts</string>

    <!-- Fragment: AnalyseExercise -->
    <string name="fragment_analyseExercise_oneRepMaxHeadline">Chart: Berechnetes 1 RM (kg)</string>
    <string name="fragment_analyseExercise_totalVolumeHeadline">Chart: Gesamtes Volumen (kg)</string>
    <string name="fragment_analyseExercise_totalSets">Chart: Anzahl Sätze</string>


</resources>































