<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_fitness_center_24"
        android:title="@string/navbar_title_dashboard" />
    <item
        android:id="@+id/analyse"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_trending_up_24"
        android:title="@string/navbar_title_analyse" />
    <item
        android:id="@+id/friends"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/navbar_title_friends"
        android:visible="true" />
    <item
        android:id="@+id/profil"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/navbar_title_profil" />
</menu>