<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgroundLight"
    tools:context=".Fragments.WorkoutSingleExercisePerformanceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="16dp"
        android:background="@drawable/my_exercise_performance_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">




        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <TextView
                android:id="@+id/textView_workoutExercisePerformance_exerciseName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:paddingRight="4dp"
                android:text="Übungsname"
                android:textColor="@color/colorBackgroundDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="140dp" />

            <TextView
                android:id="@+id/textView_workoutExercisePerformance_deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="4dp"
                android:text="Gerätenamen"
                android:textColor="@color/colorBackgroundDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView_workoutExercisePerformance_exerciseName"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_workoutExercisePerformance_notes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Notizen"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_workoutExercisePerformance_setList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_workoutExercisePerformance_notes" />

        <Button
            android:id="@+id/button__workoutExercisePerformance_addSet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/my_button_primary"
            android:gravity="center"
            android:text="@string/fragment_workoutSingleExercisePerformance_addSet"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            />



        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="5dp"
            android:paddingRight="4dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/button__workoutExercisePerformance_addSet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!---
            <NumberPicker
                android:id="@+id/numberPicker_workoutExercisePerformance_setNumber"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/my_round_grey_bg"
                android:ems="5"
                android:hint="@string/fragment_workoutSingleExercisePerformance_setNumberHint"
                android:inputType="numberDecimal"
                android:text=""
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="RtlCompat" />

                -->

            <EditText
                android:id="@+id/editText_workoutExercisePerformance_reps"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/my_round_grey_bg"
                android:ems="5"
                android:hint="@string/fragment_workoutSingleExercisePerformance_repsHint"
                android:inputType="numberDecimal"
                android:text=""
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/editText_workoutExercisePerformance_load"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/my_round_grey_bg"
                android:ems="5"
                android:hint="@string/fragment_workoutSingleExercisePerformance_loadHint"
                android:inputType="number"
                android:padding="5dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="RtlCompat" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/my_round_grey_bg">

                <Spinner
                    android:id="@+id/spinner_workoutExercisePerformance_rpe"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:ems="5"
                    android:textSize="14sp" />

            </FrameLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>